--- a/style.css
+++ b/style.css
@@ -95,175 +95,68 @@ form {
     color: black;
     cursor: pointer;
 }  
-  .container-slide {
-    max-width: 124rem;
-    padding: 0 1rem;
-    margin: 0 auto;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
-  .section-heading {
-    font-size: 3rem;
-    color: var(--primary);
-    padding: 2rem 0;
-  }
-  
-  #tranding {
-    padding: 4rem 0;
-  }
-  
-  @media (max-width:1440px) {
-    #tranding {
-      padding: 7rem 0;
-    }
-  }
-  
-  #tranding .tranding-slider {
-    height: 52rem;
-    padding: 2rem 0;
-    position: relative;
-  }
-  
-  @media (max-width:500px) {
-    #tranding .tranding-slider {
-      height: 45rem;
-    }
-  }
-  
-  @media (max-width:500px) {
-    .box-slide {
-      width: 28rem !important;
-      height: 36rem !important;
-    }
-    .box-slide {
-      width: 28rem !important;
-      height: 36rem !important;
-      border-radius: 2rem;
-      padding: 50px;
-    }
-  }
-  
-  .box-slide {
-    width: 37rem;
-    height: 42rem;
-    position: relative;
-  }
 
-  .box-slide {
-    border-radius: 2rem;
-    background-color: #FFA630;
-  }
-  
-  .box-slide .tranding-slide-content {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .tranding-slide-content .food-price {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    color: var(--white);
-  }
-  
-  .tranding-slide-content .tranding-slide-content-bottom {
-    position: absolute;
-    bottom: 2rem;
-    left: 2rem;
-    color: var(--white);
-  }
-  
-  .food-rating {
-    padding-top: 1rem;
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .rating ion-icon {
-    color: var(--primary);
-  }
-  
-  .swiper-slide-shadow-left,
-  .swiper-slide-shadow-right {
-    display: none;
-  }
-  
-  .tranding-slider-control {
-    position: relative;
-    bottom: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .tranding-slider-control .swiper-button-next {
-    left: 58% !important;
-    transform: translateX(-58%) !important;
-  }
-  
-  @media (max-width:990px) {
-    .tranding-slider-control .swiper-button-next {
-      left: 70% !important;
-      transform: translateX(-70%) !important;
-    }
-  }
-  
-  @media (max-width:450px) {
-    .tranding-slider-control .swiper-button-next {
-      left: 80% !important;
-      transform: translateX(-80%) !important;
-    }
-  }
-  
-  @media (max-width:990px) {
-    .tranding-slider-control .swiper-button-prev {
-      left: 30% !important;
-      transform: translateX(-30%) !important;
-    }
-  }
-  
-  @media (max-width:450px) {
-    .tranding-slider-control .swiper-button-prev {
-      left: 20% !important;
-      transform: translateX(-20%) !important;
-    }
-  }
-  
-  .tranding-slider-control .slider-arrow {
-    background: var(--white);
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 50%;
-    left: 42%;
-    transform: translateX(-42%);
-    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-  }
-  
-  .tranding-slider-control .slider-arrow ion-icon {
-    font-size: 2rem;
-    color: #222224;
-  }
-  
-  .tranding-slider-control .slider-arrow::after {
-    content: '';
-  }
-  
-  .tranding-slider-control .swiper-pagination {
-    position: relative;
-    width: 15rem;
-    bottom: 1rem;
-  }
-  
-  .tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
-    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
-  }
-  
-  .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
-    background: var(--primary);
-  }
+.main-topic, .another-topic1, .another-topic2{
+  background: linear-gradient(#587792 ,#086788);
+  width: 600px;
+  height: 250px;
+  border-radius: 20px;
+}
+
+.carrossel{
+  width: 100%;
+  text-align: center;
+  color: #FFA630;
+}
+
+.carrossel-container{
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
+  position: relative;
+}
+
+.carrossel-item{
+  opacity: 1;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+  z-index: 0;
+  background-size: contain;
+}
+
+.another-topic1{
+  left: 15%;
+  transform: translateX(+10%);
+  max-height: 200px;
+}
+
+.main-topic{
+  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.441);
+  opacity: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.another-topic2{
+  right: 15%;
+  transform: translateX(-10%);
+  max-height: 200px;
+}
+
+.carrossel-control{
+  display: flex;
+  justify-content: center;
+  margin: 25px 0;
+  height: 100px;
+}
+
+.carrossel-control button{
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  font-size: 30px;
+  margin: 0 50px;
+  padding: 0 12px;
+  text-transform: capitalize;
+}
