--- a/style.css
+++ b/style.css
@@ -1,182 +1,189 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=M+PLUS+Code+Latin:wght@100..700&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    font-family: "M PLUS Code Latin", system-ui;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  font-family: "M PLUS Code Latin", system-ui;
 }
 
-body{
-    background: #273847;
+body {
+  background: #273847;
+}
+
+.grid-container {
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr 4fr 1fr 6fr 1fr;
+}
+
+.grid-header {
+  grid-column: span 12;
+  grid-row: 1/2;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
 
 .menuButton {
-    background-color: black;
-    width: 67px;
-    height: 67px;
-    border-radius: 50%;
-    margin: 28px 55px
+  background-color: black;
+  width: 67px;
+  height: 67px;
+  border-radius: 50%;
+  margin: 28px 55px
 }
 
-.menuButton:hover{
-    background-color: #FFA630;
-    cursor: pointer;
+.menuButton:hover {
+  background-color: #FFA630;
+  cursor: pointer;
 }
 
 .menuIcon {
-    width: 100px;
-    position: relative;
-    bottom: 16px;
-    right: 16px;
+  width: 100px;
+  position: relative;
+  bottom: 16px;
+  right: 16px;
 }
 
 form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 6px;
-    border: 1px solid #FFA630;
-    border-radius: 30px;
-    width: 700px;
-    background-color: black;
-    padding-left: 17.35px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 6px;
+  border: 1px solid #FFA630;
+  border-radius: 30px;
+  width: 700px;
+  background-color: black;
+  padding-left: 17.35px;
 }
 
 .searchButton {
-    border: none;
-    cursor: pointer;
-    background-color: black;
-    padding-right: 33.75px;
+  border: none;
+  cursor: pointer;
+  background-color: black;
+  padding-right: 33.75px;
 }
 
 .searchIcon img {
-    width: 30px;
+  width: 30px;
 }
 
 .search {
-    all: unset;
-    background-color: black;
-    border: none;
-    font-size: 20px;
-    width: 700px;
-    color: #FFA630;
+  all: unset;
+  background-color: black;
+  border: none;
+  font-size: 20px;
+  width: 700px;
+  color: #FFA630;
 }
 
 ::placeholder {
-    color: #FFA630;
+  color: #FFA630;
 }
 
-.buttonHeader{
-    display: flex;
-    gap: 16px;
-    padding-right: 55px;
+.buttonHeader {
+  display: flex;
+  gap: 16px;
+  padding-right: 55px;
 }
 
-.buttonHeader button{
-    background-color: black;
-    color: #FFA630;
-    width: 130px;
-    height: 50px;
-    border-radius: 20px;
-    font-size: 20px;
-    border: none;
+.buttonHeader button {
+  background-color: black;
+  color: #FFA630;
+  width: 130px;
+  height: 50px;
+  border-radius: 20px;
+  font-size: 20px;
+  border: none;
 }
 
-.buttonHeader button:hover{
-    background-color: #FFA630;
-    color: black;
-    cursor: pointer;
-}  
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    margin: auto;
-
+.buttonHeader button:hover {
+  background-color: #FFA630;
+  color: black;
+  cursor: pointer;
 }
 
-.video-painel {
-    display: flex;
-    align-items: center;
-    width: 1400px;
-    height: 797px;
-    border: 3px solid #13678A;
-    border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.575);
-    color: #8DB1AB;
+.carrossel {
+  grid-column: span 12;
+  grid-row: 2/3;
+  margin-top: 40px;
+  width: 100%;
+  text-align: center;
+  color: #FFA630;
 }
 
-.playlist-painel {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 14px;
-    width: 290px;
-    height: 604px;
-    margin-left: 41px;
-    border-radius: 20px;
-    background-color: #086788;
+.carrossel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0.25turn, #587792, #086788);
+  width: 600px;
+  height: 250px;
+  border-radius: 20px;
+  opacity: 1;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+  z-index: 0;
 }
 
-.head-playlist {
-    position: relative;
-    top: 11px;
-    left: 29px;
-    color: #FFFFFF;
+.main-topic {
+  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.441);
+  opacity: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: -25px;
+  z-index: 2;
+  flex-direction: column;
+  text-shadow: -2px 5px 10px rgba(0, 0, 0, 0.25);
+  ;
 }
 
- .button-playlist {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 230px;
-    height: 40px;
-    border-radius: 10px;
-    background-color: #00000088;
-    color: white;
-    cursor: pointer;
- }
-
- .button-playlist:hover {
-    background-color: #8DB1AB;
+.another-topic1 {
+  left: 18%;
+  transform: translateX(+10%);
+  max-height: 200px;
+  justify-content: flex-start;
+  padding-left: 6%;
 }
 
-.playlist-video {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-    align-items: center;
-    
+.another-topic2 {
+  right: 18%;
+  transform: translateX(-10%);
+  max-height: 200px;
+  justify-content: flex-end;
+  padding-right: 6%;
 }
 
-.video-player {
-    background-color: #13678A;
-    width: 691px;
-    height: 401px;
-    border-radius: 20px;
-    margin: auto;
+.carrossel-title {
+  font-size: 38px;
 }
 
-.comment-painel {
-    display: flex;
-    justify-content: center;
-    width: 290px;
-    height: 640px;
-    border-radius: 20px;
-    background-color: #13678A;
+.carrossel-subtitle {
+  font-size: 20px;
+  font-weight: bold;
+  color: #8DB1AB;
 }
 
-.head-comment {
+.topics {
+  grid-column: span 12;
+  grid-row: 3/4;
+}
 
-    font-size: 20px;
-    background-color: #00000088 ;
-    color: #ffffff;
+.topic-card {
+  width: 325px;
+  height: 75px;
+  background-color: #13678A;
+  border-radius: 20px;
+  border: 2px solid #8db1ab73;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: #FFA630;
 }
