--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: 1fr 4fr 1fr 6fr 1fr;
 }
 
 .grid-header {
@@ -51,12 +51,6 @@ body {
   right: 16px;
 }
 
-.search-bar {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 form {
   display: flex;
   flex-direction: row;
@@ -85,7 +79,7 @@ form {
   background-color: black;
   border: none;
   font-size: 20px;
-  width: 650px;
+  width: 700px;
   color: #FFA630;
 }
 
@@ -136,10 +130,10 @@ form {
   position: absolute;
   transition: all 0.5s ease-in-out;
   z-index: 0;
-  box-shadow: -2px 10px 20px 6px rgba(0, 0, 0, 0.25);
 }
 
 .main-topic {
+  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.441);
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
@@ -147,6 +141,7 @@ form {
   z-index: 2;
   flex-direction: column;
   text-shadow: -2px 5px 10px rgba(0, 0, 0, 0.25);
+  ;
 }
 
 .another-topic1 {
@@ -176,18 +171,11 @@ form {
 }
 
 .topics {
-  grid-row: 4/5;
-  display: flex;
-  justify-content: center;
-  gap: 74px;
+  grid-column: span 12;
+  grid-row: 3/4;
 }
 
-.group-1 {
-  padding-top: 150px;
-}
-
-.topic-btn {
-  cursor: pointer;
+.topic-card {
   width: 325px;
   height: 75px;
   background-color: #13678A;
@@ -198,25 +186,4 @@ form {
   align-items: center;
   font-size: 20px;
   color: #FFA630;
-  margin-bottom: 75px;
-}
-
-.links{
-  background-color: rgba(0, 0, 0, 0.50);
-  display: flex;
-  justify-content: center;
-  gap: 220px;
-  padding-top: 30px;
-}
-
-.links a{
-  color: #8DB1AB;
-}
-
-.autores {
-  color: white;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.50);
-  padding: 25px 0;
-  font-size: 12px;
 }
