--- a/favorite-roads/style.css
+++ b/favorite-roads/style.css
@@ -197,7 +197,8 @@ body {
     border-top-right-radius: 20px;
     margin-top: 80px;
 }
-.historic{
+
+.roads{
     background-color: transparent;
     border: 2px solid #8DB1AB;
     color: #8DB1AB;
@@ -212,50 +213,28 @@ hr {
     padding: 0;
 }
 
-.video-cards {
+.road-group{
+    margin-top: 55px;
     grid-column: 1/-1;
     grid-row: 3/4;
     width: 1329;
     height: 330px;
-    gap: 49.39px;
 }
 
-.bg-card {
-    background-color: rgba(141, 177, 171, 0.1);
-    width: 295.21px;
-    height: 330px;
-    border: 2px solid #8DB1AB;
-    border-radius: 20px;
-    margin-top: 100px;
+.roads-row{
+    gap: 10px 46px;
     flex-wrap: wrap;
-    padding: 12px;
 }
 
-.video img {
-    width: 271px;
-    height: 179px;
-    border-radius: 20px;
-    object-fit: cover;
-    margin-top: 20px;
-}
-
-.title-video {
-    color: #8DB1AB;
+.road-follow{
+    width: 413px;
+    height: 105px;
     background-color: black;
-    border-radius: 10px;
-    width: 271px;
-    height: 39px;
-    margin-top: 20px;
-}
-
-.hour-view {
-    background-color: #8DB1AB;
+    color: #8DB1AB;
+    font-size: 20px;
     border-radius: 20px;
-    color: black;
-    width: 115px;
-    height: 28.5px;
-    font-size: 10px;
-    margin-top: 10px;
+    text-align: center;
+    padding: 10px;
 }
 
 footer{
