--- a/who-follow/style.css
+++ b/who-follow/style.css
@@ -21,7 +21,7 @@ body {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1.5fr .5fr 2fr;
+    grid-template-rows: 1.5fr .5fr 1.6fr;
     max-width: 1400px;
     margin: 40px auto;
 }
@@ -197,7 +197,8 @@ body {
     border-top-right-radius: 20px;
     margin-top: 80px;
 }
-.historic{
+
+.follow{
     background-color: transparent;
     border: 2px solid #8DB1AB;
     color: #8DB1AB;
@@ -212,50 +213,45 @@ hr {
     padding: 0;
 }
 
-.video-cards {
+.mentor-group {
     grid-column: 1/-1;
     grid-row: 3/4;
     width: 1329;
     height: 330px;
     gap: 49.39px;
+    margin-top: 20px;
 }
 
-.bg-card {
-    background-color: rgba(141, 177, 171, 0.1);
-    width: 295.21px;
-    height: 330px;
-    border: 2px solid #8DB1AB;
-    border-radius: 20px;
-    margin-top: 100px;
+.mentor-row{
+    gap: 23px 75px;
     flex-wrap: wrap;
-    padding: 12px;
 }
 
-.video img {
-    width: 271px;
-    height: 179px;
-    border-radius: 20px;
-    object-fit: cover;
-    margin-top: 20px;
-}
-
-.title-video {
-    color: #8DB1AB;
+.mentor-photo{
+    width: 50px;
+    height: 50px;
     background-color: black;
-    border-radius: 10px;
-    width: 271px;
-    height: 39px;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 7px solid #8DB1AB;
+}
+.mentor-icon{
+    color: #8DB1AB;
 }
 
-.hour-view {
-    background-color: #8DB1AB;
+.mentor-name{
+    background-color: black;
     border-radius: 20px;
-    color: black;
-    width: 115px;
-    height: 28.5px;
-    font-size: 10px;
-    margin-top: 10px;
+    color: #8DB1AB;
+    font-size: 16px;
+    width: 200px;
+    height: 45px;
+}
+
+.mentor{
+    gap: 20px;
 }
 
 footer{
