--- a/style.css
+++ b/style.css
@@ -19,8 +19,12 @@ body {
     align-items: center;
 }
 
-/* CONTAINER GERAL E NAV */
+button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
 
+/* CONTAINER GERAL E NAV */
 .grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -102,7 +106,6 @@ body {
 .button-header button:hover {
     background-color: #FFA630;
     color: black;
-    cursor: pointer;
 }
 
 .user-page {
@@ -114,8 +117,12 @@ body {
     color: black;
 }
 
-/* CARROSSEL */
+.nav-btn:hover, .user-button:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
 
+/* CARROSSEL */
 .container {
     display: flex;
     width: 58vw;
@@ -148,6 +155,11 @@ body {
     margin: 2rem 0.3rem;
     position: relative;
     transition: all 700ms ease-in;
+}
+
+.panel:hover {
+    opacity: 0.7;
+    transition: none;
 }
 
 .panel p {
@@ -186,7 +198,6 @@ body {
 }
 
 /* SEÇÃO DE TÓPICOS */
-
 .topics {
     grid-column: span 12;
     grid-row: 2/3;
@@ -243,7 +254,6 @@ body {
 }
 
 /* FOOTER E LINKS */
-
 .links {
     background-color: rgba(0, 0, 0, 0.50);
     display: flex;
@@ -272,7 +282,6 @@ body {
 }
 
 /* MODAL DE LOGIN */
-
 .modal {
     display: none;
     position: fixed;
