--- a/style.css
+++ b/style.css
@@ -257,6 +257,22 @@ button:hover {
     color: #13678A;
 }
 
+.topic-back-btn {
+    cursor: pointer;
+    width: 100px;
+    height: 35px;
+    background-color: #13678A;
+    border-radius: 20px;
+    border: 2px solid #8db1ab73;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #FFA630;
+    margin-bottom: 75px;
+    box-shadow: -1px 4px 5px 1px rgba(0, 0, 0, 0.25);
+}
+
 /* FOOTER E LINKS */
 .links {
     background-color: rgba(0, 0, 0, 0.50);
