--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ button:hover {
     box-shadow: -1px 4px 5px 1px rgba(0, 0, 0, 0.25);
 }
 
-/* FOOTER E LINKS */
+/* ================= FOOTER E LINKS ================= */
 .links {
     background-color: rgba(0, 0, 0, 0.50);
     display: flex;
@@ -301,7 +301,7 @@ button:hover {
     transition: 0.7s;
 }
 
-/* MODAL DE LOGIN */
+/* ================= MODAL DE LOGIN ================= */
 .modal {
     display: none;
     position: fixed;
@@ -402,4 +402,119 @@ button:hover {
 
 .more-options {
     margin: 20px 0;
+}
+
+/* ================= SIDEBAR ================= */
+
+.sidebar {
+    position: fixed;
+    top: 24px;
+    left: 24px;
+    bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 260px;
+    border-radius: 16px;
+    padding: 0 16px;
+    border: 1px solid rgb(255 255 255 / 8%);
+    background: rgb(0 0 0 / 40%);
+    backdrop-filter: blur(20px);
+    transition: width 0.4s;
+    z-index: 99;
+}
+
+.ocult-sidebar {
+    display: none;
+}
+
+.sidebar header button {
+    width: 52px;
+}
+
+.sidebar button {
+    position: relative;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    border-radius: 6px;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    padding: 0 16px;
+    color: #FFA630;
+    background: none;
+    border: none;
+}
+
+.sidebar button p:nth-child(2) {
+    flex: 1 1 auto;
+}
+
+.sidebar button:is(.active, :hover) {
+    background: rgb(0 0 0 / 30%);
+}
+
+.sidebar button i {
+    transition: 0.3s;
+}
+
+.sidebar button.active>i:nth-child(3) {
+    rotate: -180deg;
+}
+
+.sidebar button:not(.active):hover {
+    background: rgb(0 0 0 / 10%);
+}
+
+.sidebar ul {
+    display: grid;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+.sub-menu {
+    position: relative;
+    overflow: hidden;
+    height: 0;
+    transition: 0.5s;
+}
+
+.sub-menu ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: grid;
+}
+
+.sub-menu button {
+    padding-left: 52px;
+}
+
+.sub-menu button::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 24px;
+    translate: 0 -50%;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: rgb(255 255 255 / 35%);
+}
+
+.sidebar .material-symbols-outlined {
+    font-size: 16px;
+}
+
+.sidebar i {
+    font-size: 20px;
+    width: 20px;
+    max-width: 20px;
+    min-width: 20px;
 }
