--- a/doug/style.css
+++ b/doug/style.css
@@ -566,7 +566,7 @@ footer{
 
 /*-----Painel Feedback-----*/
 .painel_feedback {
-    display: flex;  /* <---------- aqui tem que alterar o display para flex*/
+    display: none;  /* <---------- aqui tem que alterar o display para flex*/
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -652,4 +652,114 @@ footer{
     display: flex;
     justify-content: flex-end;
     padding-right: 24px;
+}
+
+/*-----Painel Nexus Chat-----*/
+.painel_nexusChat {
+    width: 694px;
+    height: 828px;
+    background-color: #086788;
+    border-radius: 15px;
+}
+
+.nexusChat_top {
+    display: flex;
+    justify-content: flex-start;
+    padding: 16px;
+    font-size: 1.5rem;
+}
+
+.nexusChat_gap {
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+
+.nexusChat_content {
+    width: 574px;
+    height: 514px;
+    margin: 0 auto;
+    border: 1px solid #8DB1AB;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.nexusChat_message {
+    width: 574px;
+    margin: 0 auto;
+}
+
+.nexusChat_input {
+    padding: 10px;
+    width: 574px;
+    height: 118px;
+    border-radius: 15px 15px 0 0;
+    background-color: #D9D9D9;
+    border: none;
+    outline: none;
+    font-size: 1.6rem;
+    border-style: none;
+}
+
+.nexusChat_input:focus {
+    outline: none;
+    border: none;
+  }
+
+.nexusChat_input::placeholder {
+    font-size: 1.6rem;
+}
+
+.input_tolls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    height: 40px;
+    border-radius: 0 0 15px 15px;
+    background-color: #D9D9D9;
+    border: none;
+}
+
+.btnTolls {
+    display: flex;
+    gap: 10px;
+}
+
+
+#btnAttachment {
+    background-color: none;
+    border: none;
+    background-color: #D9D9D9;
+    cursor: pointer;
+}
+
+#btnAttachment:hover {
+    box-shadow: 1px 1px 4px gray;
+}
+
+#btnEmoji {
+    background-color: none;
+    border: none;
+    background-color: #D9D9D9;
+    cursor: pointer;
+}
+
+#btnEmoji:hover {
+    box-shadow: 1px 1px 4px gray;
+}
+
+#btnSendChatNexus {
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #BEBCBC;
+    border: none;
+    font-weight: bold;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+#btnSendChatNexus:hover {
+    box-shadow: 1px 1px 5px gray;
 }
