--- a/doug/style.css
+++ b/doug/style.css
@@ -487,9 +487,9 @@ footer{
 }
 
 
-/*-----Duvidas Frequentes-----*/
+/*----- Frequentes-----*/
 .painel_question {
-    display: none;  /* <---------- aqui tem que alterar o display para flex*/
+    display: flex;  /* <---------- aqui tem que alterar o display para flex*/
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -522,8 +522,9 @@ footer{
 .painel_about {
     display: none;  /* <---------- aqui tem que alterar o display para flex*/
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    gap: 20px;
+    padding: 35px;
     width: 782px;
     height: 828px;
     border: 2px solid #8DB1AB;
@@ -532,7 +533,7 @@ footer{
 }
 
 .painel_about h2 {
-    font-size: 38px;
+    font-size: 2.5rem;
     color: #8DB1AB;
 }
 
@@ -552,20 +553,22 @@ footer{
 
 .about_top h2 {
     color: black;
-    font-size: 35px;
+    font-size: 2.2rem;
 }
 
 .about_text {
     padding: 20px;
-    height: 468px;
+    max-height: 600px;
     font-size: 16px;
     background-color: #8DB1AB;
     border-radius: 0 0 10px 10px;
     text-align: justify;
+    font-size: 1.4rem;
+    text-indent: 15px;
 }
 
 /*-----Painel Feedback-----*/
-.painel_feedback {
+#painel_feedback {
     display: none;  /* <---------- aqui tem que alterar o display para flex*/
     flex-direction: column;
     justify-content: center;
@@ -578,8 +581,8 @@ footer{
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.painel_feedback h2 {
-    font-size: 38px;
+#painel_feedback h2 {
+    font-size: 2rem;
     color: #8DB1AB;
 }
 
@@ -596,11 +599,7 @@ footer{
     height: 92px;
     background-color: #086788;
     border-radius: 10px 10px 0 0;
-}
-
-.feedback_top h2 {
     color: black;
-    font-size: 35px;
 }
 
 .feedback_text {
@@ -623,9 +622,16 @@ footer{
     height: 38px;
     background-color: #D9D9D9;
     box-shadow: inset 0px 2px 3px gray;
+    font-size: 1.2rem;
 }
 
-.input_feedback {
+.input_info:focus {
+    outline: none;
+    border: none;
+}
+
+#input_feedback {
+    padding: 14px;
     width: 594px;
     height: 80px;
     border: none;
@@ -633,6 +639,13 @@ footer{
     background-color: #D9D9D9;
     box-shadow: inset 0px 2px 3px gray;
     padding-top: -10px;
+    font-size: 1.2rem;
+    resize: none;
+}
+
+#input_feedback:focus {
+    outline: none;
+    border: none;
 }
 
 .btnFeedback {
@@ -655,7 +668,9 @@ footer{
 }
 
 /*-----Painel Nexus Chat-----*/
-.painel_nexusChat {
+#painel_nexusChat {
+    display: none; /* <---------- aqui tem que alterar o display para flex*/
+    flex-direction: column;
     width: 694px;
     height: 828px;
     background-color: #086788;
@@ -696,11 +711,7 @@ footer{
     gap: 12px;
 }   
 
-.fa-circle-user {
-    color: #FFA630; 
-    font-size: 40px; 
-    height: 50px;
-    width: 50px;
+.back_circle {
     padding: 5px; 
     background-color: black; 
     border-radius: 50%;
