--- a/exercises/style.css
+++ b/exercises/style.css
@@ -22,8 +22,12 @@ main, section, aside {
     border-radius: 2rem;
 }
 
-.main-card, .alternative {
+.main-card, .alternative, .question {
     flex-direction: column;
+}
+
+.question p {
+    font-size: 1.6rem;
 }
 
 .main-card, .alternate-card {
@@ -64,6 +68,7 @@ main, section, aside {
 .alternative h3 {
     font-size: 2.2rem;
 }
+
 .alternative p {
     font-size: 2rem;
 }
