--- a/styleUser.css
+++ b/styleUser.css
@@ -150,13 +150,20 @@
         color: #8DB1AB;
         text-decoration: none;
         font-size: 16px;
+        padding: 1rem 0.5rem;
+    }
+
+    .user-setting a:hover {
+        color: black;
     }
 
     .user-setting:hover,
     .user-video:hover{
         background-color: #FFA630;
         text-decoration: none;
+        color: black;
         font-size: 16px;
+        cursor: pointer;
     }
 
     /* Progressos do usuário */
