arrumando modal de progresso de usuario

--- a/styleUser.css
+++ b/styleUser.css
@@ -172,6 +172,7 @@
         height: 332px;
         grid-column: 7 / 12;
         flex-wrap: wrap;
+        cursor: pointer;
     }
 
     .progress-title {
