--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ button:hover {
     background: linear-gradient(to left, #086788, #587792);
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
     color: #FFA630;
-    height: 40vh;
+    min-height: 40vh;
     border-radius: 3rem;
     cursor: pointer;
     flex: 0.5;
